Box overlap layout

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   </head>
   <body>
 	<script src="index.js"></script>
-    <section class="standard-section">
-
+    <section class="standard-section parent1">
+      <div class="box1 square"></div>
+      <div class="box2 offsetsquare square"></div>
     </section>
   </body>
 </html>
