Filter Blur and grayscale added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
   <body>
 	<script src="index.js"></script>
     <section class="standard-section parent1">
-      <div class="box1 square"></div>
-      <div class="box2 offsetsquare square"></div>
+      <div class="box1 square filter-blur "></div>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Pink_lady_and_cross_section.jpg/440px-Pink_lady_and_cross_section.jpg"  class="box2 rect filter-grayscale"></div>
+      <div class="box2 square filter-blur-grayscale"></div>
     </section>
+
+    <section class="standard-section parent1">
+      <div class="box1 square filter-blur "></div>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Pink_lady_and_cross_section.jpg/440px-Pink_lady_and_cross_section.jpg"  class="box2 rect filter-blur-grayscale"></div>
+      <div class="box2 square filter-blur-grayscale"></div>
+    </section>
+    
   </body>
 </html>
