--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <h1>CSS Filter Properties</h1>
     <h5>Blur, Grayscale, BlurGrayscale</h5>
 	<script src="index.js"></script>
     <section class="standard-section parent1">
